--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_webview_plugin: ^0.2.1+2
-  flutter_html_widget: ^0.0.2
+  #flutter_webview_plugin: ^0.2.1+2
+  #flutter_html_widget: ^0.0.2
+  flutter_html_view: ^0.5.8
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,13 @@ flutter:
    - images/tab_vector_my.png
    - images/ic_img_default.png
    - images/result_empty_light.png
+   - images/article_detail_fav_on.png
+   - images/article_detail_fav_un.png
+   - images/article_detail_like.png
+   - images/article_detail_like_on.png
+   - images/article_detail_weibo.png
+   - images/article_detail_weixin.png
+   - images/ic_arrow_right.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
