--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  #json_serializable执行flutter packages pub run build_runner build
+  json_serializable: ^1.5.1
+  build_runner: ^0.10.0
   #flutter_webview_plugin: ^0.2.1+2
   #flutter_html_widget: ^0.0.2
   flutter_html_view: ^0.5.8
@@ -57,6 +60,7 @@ flutter:
    - images/article_detail_weibo.png
    - images/article_detail_weixin.png
    - images/ic_arrow_right.png
+   - images/menu_user.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
